Added snow css animation

--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -2,6 +2,11 @@
 
 {% block content %}
     <div class="jumbotron">
+        <div class="snow foreground"></div>
+        <div class="snow foreground layered"></div>
+        <div class="snow middleground"></div>
+        <div class="snow middleground layered"></div>
+
         <div class="jumbotron-inner">
             <h1>Throw a Secret Santa with<br> your Slack team!</h1>
 
