--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -18,8 +18,6 @@
     </head>
     <body>
 
-        <canvas id="snow"></canvas>
-
         <header class="header">
             <div class="home-menu pure-menu pure-menu-horizontal">
                 <div class="pure-menu-heading">
@@ -33,10 +31,7 @@
 
                 <ul class="pure-menu-list">
                     <li class="pure-menu-item">
-                        <a class="pure-menu-link" href="https://github.com/jolicode/slack-secret-santa/"><i class="fa fa-github"></i> Fork me</a>
-                    </li>
-                    <li class="pure-menu-item">
-                        <a class="pure-menu-link" onclick="goSnow(); return false;" href=""><i class="fa fa-snowflake-o"></i>  Let it snow!</a>
+                        <a target="_blank" class="pure-menu-link" href="https://github.com/jolicode/slack-secret-santa/"><i class="fa fa-github"></i> Fork me on GitHub</a>
                     </li>
                 </ul>
             </div>
@@ -46,7 +41,7 @@
             {% block content %}
             {% endblock content %}
 
-            <footer class="footer is-center">
+            <footer class="footer is-center {% block footerClass %}{% endblock %}">
                 <a href="mailto:mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="fa fa-support"></i> Need help? Contact us!</a>
                 <p>
                     Made with ♥ by <a href="http://jolicode.com">JoliCode</a>
@@ -55,113 +50,5 @@
                 </p>
             </footer>
         </div>
-
-        <script type="text/javascript">
-            /**
-             * Taken from http://thecodeplayer.com/walkthrough/html5-canvas-snow-effect
-             */
-            var snowStarted = false;
-            window.goSnow = function() {
-                if (snowStarted) {
-                    snowStarted = false;
-
-                    return false;
-                }
-
-                snowStarted = true;
-                //canvas init
-                var canvas = document.getElementById("snow");
-                var ctx = canvas.getContext("2d");
-
-                //canvas dimensions
-                var W = window.innerWidth - 30;
-                var H = window.innerHeight;
-                canvas.width = W;
-                canvas.height = H;
-
-                //snowflake particles
-                var mp = 100; //max particles
-                var particles = [];
-                for(var i = 0; i < mp; i++)
-                {
-                    particles.push({
-                        x: Math.random()*W, //x-coordinate
-                        y: Math.random()*H, //y-coordinate
-                        r: Math.random()*4+1, //radius
-                        d: Math.random()*mp //density
-                    })
-                }
-
-                //Lets draw the flakes
-                var draw = function()
-                {
-                    if (!snowStarted) {
-                        clearInterval(draw);
-                        ctx.clearRect(0, 0, W, H);
-                        particles.length = 0;
-                        return;
-                    }
-
-                    ctx.clearRect(0, 0, W, H);
-
-                    ctx.fillStyle = "rgba(255, 255, 255, 0.8)";
-                    ctx.beginPath();
-                    for(var i = 0; i < mp; i++)
-                    {
-                        var p = particles[i];
-                        ctx.moveTo(p.x, p.y);
-                        ctx.arc(p.x, p.y, p.r, 0, Math.PI*2, true);
-                    }
-                    ctx.fill();
-                    update();
-                }
-
-                //Function to move the snowflakes
-                //angle will be an ongoing incremental flag. Sin and Cos functions will be applied to it to create vertical and horizontal movements of the flakes
-                var angle = 0;
-                var update = function()
-                {
-                    angle += 0.01;
-                    for(var i = 0; i < mp; i++)
-                    {
-                        var p = particles[i];
-                        //Updating X and Y coordinates
-                        //We will add 1 to the cos function to prevent negative values which will lead flakes to move upwards
-                        //Every particle has its own density which can be used to make the downward movement different for each flake
-                        //Lets make it more random by adding in the radius
-                        p.y += Math.cos(angle+p.d) + 1 + p.r/2;
-                        p.x += Math.sin(angle) * 2;
-
-                        //Sending flakes back from the top when it exits
-                        //Lets make it a bit more organic and let flakes enter from the left and right also.
-                        if(p.x > W+5 || p.x < -5 || p.y > H)
-                        {
-                            if(i%3 > 0) //66.67% of the flakes
-                            {
-                                particles[i] = {x: Math.random()*W, y: -10, r: p.r, d: p.d};
-                            }
-                            else
-                            {
-                                //If the flake is exitting from the right
-                                if(Math.sin(angle) > 0)
-                                {
-                                    //Enter from the left
-                                    particles[i] = {x: -5, y: Math.random()*H, r: p.r, d: p.d};
-                                }
-                                else
-                                {
-                                    //Enter from the right
-                                    particles[i] = {x: W+5, y: Math.random()*H, r: p.r, d: p.d};
-                                }
-                            }
-                        }
-                    }
-                }
-
-                //animation loop
-                setInterval(draw, 33);
-                return false;
-            }
-        </script>
     </body>
 </html>
