Tweak user list

--- a/Resources/views/run.html.twig
+++ b/Resources/views/run.html.twig
@@ -20,16 +20,16 @@
                     <div class="user-search">
                         <div class="search-wrapper">
                             <input placeholder="Filter users by searching by real name or username" type="text" id="user-search-input" />
-                            <span class="search-cleaner fa fa-times" id="search-cleaner"></span>
+                            <span class="search-cleaner fa fa-times" id="search-cleaner" title="Empty the query"></span>
                         </div>
                         <div class="helper">
                             <label>
                                 <input type="checkbox" checked="checked" id="restrict-user-checkbox" value="" />
                                 <span>Show restricted user</span>
                             </label>
-                            <span class="check-all" id="all-checker">Check all</span>
+                            <span class="check-all" id="all-checker" title="Check all the visible users in the list below">Check all</span>
                             /
-                            <span class="uncheck-all" id="all-unchecker">Uncheck all</span>
+                            <span class="uncheck-all" id="all-unchecker" title="Uncheck all the visible users in the list below">Uncheck all</span>
                         </div>
                     </div>
                     {% spaceless %}
