--- a/web/style.css
+++ b/web/style.css
@@ -39,7 +39,6 @@ a {
     display: flex;
     max-width: 960px;
     margin: 0 auto;
-    position: relative;
 }
 .home-menu .pure-menu-heading a {
     color: white;
@@ -438,13 +437,28 @@ footer a {
 }
 .user-search .search-wrapper {
     flex: 1;
+    display: flex;
+    align-items: center;
+    margin-right: 1em;
 }
 .user-search .search-wrapper input {
     border: 0 none;
     padding: 1em;
+    flex: 1;
+}
+.user-search .search-wrapper span {
+    cursor: pointer;
+}
+.user-search .helper {
+    display: flex;
+    align-items: center;
 }
 .user-search .helper label {
     cursor: pointer;
+    margin-right: 1em;
+}
+.user-search .helper input {
+    vertical-align: middle;
 }
 .user-search .helper .check-all,
 .user-search .helper .uncheck-all {
