Fix contact link

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -42,7 +42,7 @@
             {% endblock content %}
 
             <footer class="footer is-center {% block footerClass %}{% endblock %}">
-                <a href="mailto:mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="fa fa-support"></i> Need help? Contact us!</a>
+                <a href="mailto:coucou+secretsanta@jolicode.com" class="support-link"><i class="fa fa-support"></i> Need help? Contact us!</a>
                 <p>
                     Made with ♥ by <a href="http://jolicode.com">JoliCode</a>
                     &mdash;
