Fix stretched images on firefox

--- a/Resources/views/index.html.twig
+++ b/Resources/views/index.html.twig
@@ -33,7 +33,9 @@
         <h2 class="content-head is-center">How does it works?</h2>
 
         <section class="step-feature">
-            <img src="/images/step-slack.png">
+            <div class="step-feature-image">
+                <img src="/images/step-slack.png">
+            </div>
             <div class="step-feature-text">
                 <h3>1. Connect to Your Slack</h3>
                 <p>Click on the "Add to Slack" button below then authorize the app to access your Slack team.</p>
@@ -41,7 +43,9 @@
         </section>
 
         <section class="step-feature reverse">
-            <img src="/images/step-users.png">
+            <div class="step-feature-image">
+                <img src="/images/step-users.png">
+            </div>
             <div class="step-feature-text">
                 <h3>2. Select Users</h3>
                 <p>We show you all your Slack users (excluding the bots, because they don't do nice gifts). Just select which users will take part to your secret santa.</p>
@@ -49,7 +53,9 @@
         </section>
 
         <section class="step-feature">
-            <img src="/images/step-inform.png">
+            <div class="step-feature-image">
+                <img src="/images/step-inform.png">
+            </div>
             <div class="step-feature-text">
                 <h3>3. Inform Users</h3>
                 <p>After <a href="https://github.com/jolicode/slack-secret-santa/blob/master/src/Rudolph.php">Rudolph</a> shuffled the users, we throw at each participant a private message with his peer name and an optional admin message.</p>
@@ -57,7 +63,9 @@
         </section>
 
         <section class="step-feature reverse">
-            <img src="/images/step-buy.png">
+            <div class="step-feature-image">
+                <img src="/images/step-buy.png">
+            </div>
             <div class="step-feature-text">
                 <h3>4. Buy a Gift</h3>
                 <p>Everything is now setup. Just go buy a gift for your peer before your party. Merry Christmas!</p>
