🕮 Improve wording and design stuff

--- a/Resources/TwigBundle/views/Exception/error404.html.twig
+++ b/Resources/TwigBundle/views/Exception/error404.html.twig
@@ -2,14 +2,13 @@
 
 {% block content %}
     <div class="content error-page">
-        <h2>Error 404</h2>
-
-        <p>Ho ho ho! The page could not be found.</p>
-
         <div class="is-center">
-            <img class="pure-img-responsive" alt="Error 404" src="/images/error-404.gif">
-        </div>
+            <h2>Error 404</h2>
 
+            <p>Ho ho ho! The page could not be found.</p>
+
+            <img class="is-center" alt="Error 404" src="/images/error-404.gif">
+        </div>
         <div class="is-center">
             <a href="{{ path('homepage') }}" class="big-button">
                 <span class="fa fa-angle-left" aria-hidden="true"></span>
