--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -21,7 +21,7 @@
         <header class="header">
             <div class="home-menu pure-menu pure-menu-horizontal">
                 <div class="pure-menu-heading">
-                    <a class="hvr-buzz" href="{{ path('homepage') }}">
+                    <a href="{{ path('homepage') }}">
                         <div class="logo-wrapper">
                             <img src="/images/logo.png" alt="Secret Santa" />
                         </div>
