--- a/Resources/views/run.html.twig
+++ b/Resources/views/run.html.twig
@@ -86,7 +86,7 @@
                 </div>
 
                 <div class="is-center">
-                    <button type="submit" class="big-button hvr-buzz" id="submit-button">
+                    <button type="submit" class="big-button" id="submit-button">
                         <span class="fa fa-paper-plane" aria-hidden="true"></span>
                         Finish and send Secret Santa messages!
                     </button>
