Add retry behaviour and refactore Result into SecretSanta

--- a/Resources/views/summary.txt.twig
+++ b/Resources/views/summary.txt.twig
@@ -9,6 +9,6 @@ So you really want to know the secret repartition?? Here it is:
 /!\ Spoiler alert /!\
 /!\ Spoiler alert /!\
 
-{% for giver, receiver in result.associations %}
+{% for giver, receiver in secretSanta.associations %}
 @{{ giver }} must offer a gift to @{{ receiver }}
 {% endfor %}
