--- a/Resources/views/finish.html.twig
+++ b/Resources/views/finish.html.twig
@@ -1,53 +1,76 @@
 {% extends 'layout.html.twig' %}
 
 {% block content %}
-    {% if result %}
-        <div class="content result-block">
-            {% if result.isOk %}
-                <h2>Well done! All messages were sent</h2>
-            {% else %}
-                <h2>A technical error occurred when sending messages to users</h2>
+    <div class="content result-block">
+        {% if secretSanta.isDone %}
+            <h2>Well done! All messages were sent</h2>
+        {% else %}
+            <h2>A technical error occurred when sending messages to users</h2>
 
-                <div class="result-error">
-                    <p>
-                        "{{ result.error }}"
-                    </p>
+            <div class="result-error">
+                <p>
+                    "{{ secretSanta.error }}"
+                </p>
 
-                    <p>
-                        Here is the list of users that were not informed:
-                    </p>
+                <p>
+                    Here is the list of users that were not informed:
+                </p>
 
-                    <ul>
-                        {% for giver,receiver in result.remainingAssociations %}
-                            <li><strong>@{{ giver }}</strong> must offer a gift to <strong>@{{ receiver }}</strong></li>
-                        {% endfor %}
-                    </ul>
+                <ul>
+                    {% for giver,receiver in secretSanta.remainingAssociations %}
+                        <li><strong>@{{ giver }}</strong> must offer a gift to <strong>@{{ receiver }}</strong></li>
+                    {% endfor %}
+                </ul>
 
-                    <p>
-                        Sorry for the inconvenience, you will need to contact them <strong>manually</strong>.
-                        <a href="https://github.com/jolicode/slack-secret-santa/issues">Let us know too!</a>
-                    </p>
+                <div class="is-center">
+                    <a href="{{ path('retry', {hash: secretSanta.hash}) }}" class="big-button warning-btn" id="retry-button">
+                        <span class="fa fa-exclamation-triangle" aria-hidden="true"></span>
+                        Try to send the remaining messages
+                    </a>
                 </div>
-            {% endif %}
 
-            <p class="summary">
-                A summary of the repartition is available for download. Keep it secret, even for you, to avoid breaking the Secret Santa spirit.
-            </p>
+                <script type="text/javascript">
+                    var secretSantaRetried = false;
 
-            <p>
-                Be aware that we do not persist anything forever so the summary is only available now, you will not be able to get it back later.
-            </p>
+                    var retryButton = document.getElementById('retry-button');
 
-            <div class="is-center">
-                <a href="{{ path('summary', {hash: result.hash}) }}" class="big-button" download="summary.txt">
-                    <span class="fa fa-download" aria-hidden="true"></span>
-                    Download summary
-                </a>
-                <a href="{{ path('run') }}" class="big-button">
-                    <span class="fa fa-repeat" aria-hidden="true"></span>
-                    Start another Secret Santa
-                </a>
+                    /**
+                     * Prevent the multi-click of the button
+                     */
+                    retryButton.addEventListener('click', function(e) {
+                        if (secretSantaRetried) {
+                            e.preventDefault();
+                        } else {
+                            secretSantaRetried = true;
+                            retryButton.children[0].className = 'fa fa-hourglass-start';
+                        }
+                    }, false);
+                </script>
+
+                <p>
+                    Sorry for the inconvenience. If the retry button did not work, you can still contact them <strong>manually</strong>.
+                    <a href="https://github.com/jolicode/slack-secret-santa/issues">Let us know too!</a>
+                </p>
             </div>
+        {% endif %}
+
+        <p class="summary">
+            A summary of the repartition is available for download. Keep it secret, even for you, to avoid breaking the Secret Santa spirit.
+        </p>
+
+        <p>
+            Be aware that we do not persist anything forever so the summary is only available now, you will not be able to get it back later.
+        </p>
+
+        <div class="is-center">
+            <a href="{{ path('summary', {hash: secretSanta.hash}) }}" class="big-button" download="summary.txt">
+                <span class="fa fa-download" aria-hidden="true"></span>
+                Download summary
+            </a>
+            <a href="{{ path('run') }}" class="big-button">
+                <span class="fa fa-repeat" aria-hidden="true"></span>
+                Start another Secret Santa
+            </a>
         </div>
-    {% endif %}
+    </div>
 {% endblock content %}
