--- a/web/style.css
+++ b/web/style.css
@@ -28,11 +28,22 @@ a {
     font-size: 1.2em;
     text-decoration: none;
     background-color: #E03A4D;
-    border: 3px solid white;
+    border: 0 none;
     color: white;
     border-radius: 10px;
     padding: 1em;
 }
+.big-button:hover {
+    text-decoration: none;
+    background-color: #CC3850;
+}
+.big-button.warning-btn {
+    background-color: #FFC520;
+}
+.big-button.warning-btn:hover {
+    background-color: #FFA500;
+}
+
 /**
  * Header
  */
@@ -72,7 +83,6 @@ a {
 }
 .logo-wrapper img {
   position: absolute;
-  left: 10px;
   left: 3px;
   top: 5px;
   width: 95px;
