👓 Change the title, better SEO

--- a/Resources/views/layout.html.twig
+++ b/Resources/views/layout.html.twig
@@ -14,7 +14,7 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="/style.css">
 
-        <title>Slack Secret Santa!</title>
+        <title>Slack Secret Santa - The Secret Santa bot for your Slack team</title>
     </head>
     <body>
 
