Add a warning for big secret santa

--- a/Resources/views/run.html.twig
+++ b/Resources/views/run.html.twig
@@ -82,6 +82,13 @@
                         <p>
                             Anything else is up to you, have fun!
                         </p>
+
+                        <p class="big-santa-warning">
+                            For Secret Santa with a lot of participants, the final step (send Slack private messages)
+                            can take some time (up to 20 sec).<br />
+                            Don't worry, in case something goes wrong, a "Retry" button will allow you to send remaining
+                            messages.
+                        </p>
                     </div>
                 </div>
 
