Keep traces of all errors

--- a/Resources/views/finish.html.twig
+++ b/Resources/views/finish.html.twig
@@ -9,7 +9,7 @@
 
             <div class="result-error">
                 <p>
-                    "{{ secretSanta.error }}"
+                    "{{ secretSanta.errors|last }}"
                 </p>
 
                 <p>
