--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -23,7 +23,7 @@
                 <div class="pure-menu-heading">
                     <a href="{{ path('homepage') }}">
                         <div class="logo-wrapper">
-                            <img src="/images/logo.png" alt="Secret Santa" />
+                            <img src="/images/logo{{ spoilInProgress is defined ? '-spoiler' : '' }}.png" alt="Secret Santa" />
                         </div>
                         <h1>Slack<br>Secret Santa</h1>
                     </a>
