--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -14,6 +14,8 @@
         <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
         <link rel="stylesheet" href="/style.css">
 
+        <meta name="slack-app-id" content="A0E7EFUB1">
+
         <title>Slack Secret Santa - The Secret Santa bot for your Slack team</title>
     </head>
     <body>
