--- a/public/style.css
+++ b/public/style.css
@@ -735,6 +735,7 @@ textarea {
 }
 .hall-of-fame .they-use-it li img {
     width: 100%;
+    max-height: 100px;
 }
 @media screen and (min-width: 800px) {
     .hall-of-fame .they-use-it li {
