--- a/templates/santa/run.html.twig
+++ b/templates/santa/run.html.twig
@@ -78,7 +78,7 @@
                         </p>
 
                         <div class="is-center">
-                            <img class="pure-img-responsive" alt="Sample message received by users" src="/images/sample.png">
+                            <img class="pure-img-responsive" alt="Sample message received by users" src="{{ asset('images/sample.png') }}">
                         </div>
 
                         <p>
